# ChangeLog for net-libs/gnutls
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.186 2009/04/12 18:07:52 arfrever Exp $

*gnutls-2.6.5 (12 Apr 2009)

  12 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/gnutls-2.2.5-CVE-2008-4989-V2.patch,
  -files/gnutls-2.3.11+gcc-4.3.patch, -gnutls-2.2.5.ebuild,
  -gnutls-2.4.1-r2.ebuild, -gnutls-2.6.0-r2.ebuild, -gnutls-2.6.3.ebuild,
  +gnutls-2.6.5.ebuild, -gnutls-2.7.4.ebuild:
  Version bump. Remove older versions.

  11 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnutls-2.6.4.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #264392

  08 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnutls-2.6.4.ebuild:
  Stable for HPPA (bug #264392).

  07 Apr 2009; Tobias Klausmann <klausman@gentoo.org> gnutls-2.6.4.ebuild:
  Stable on alpha, bug #264392

  05 Apr 2009; Markus Meier <maekke@gentoo.org> gnutls-2.6.4.ebuild:
  amd64/x86 stable, bug #264392

  01 Apr 2009; Joseph Jezak <josejx@gentoo.org> gnutls-2.6.4.ebuild:
  Marked ppc/ppc64 stable for bug #264392.

*gnutls-2.6.4 (01 Mar 2009)

  01 Mar 2009; Daniel Black <dragonheart@gentoo.org> +gnutls-2.6.4.ebuild:
  version bump as per bug #259018  thanks to Arfrever

*gnutls-2.7.6 (28 Feb 2009)

  28 Feb 2009; Daniel Black <dragonheart@gentoo.org> -gnutls-2.6.2.ebuild,
  +gnutls-2.7.6.ebuild:
  version bump as per bug #259018 patch thanks to Arfrever Frehtes Taifersar
  Arahesis

*gnutls-2.7.4 (10 Jan 2009)

  10 Jan 2009; Daniel Black <dragonheart@gentoo.org> +gnutls-2.7.4.ebuild:
  version bump as per bug #254445 - still masked - it breaks a few packages as
  per bug #253709

  10 Jan 2009; Daniel Black <dragonheart@gentoo.org>
  +files/gnutls-2.6.0-openpgp-selftest.patch, gnutls-2.6.0-r2.ebuild,
  gnutls-2.6.2.ebuild, gnutls-2.6.3.ebuild:
  openpgp patch from upstream. https://savannah.gnu.org/support/index.php?106543

*gnutls-2.6.3 (05 Jan 2009)
