@@ -8,17 +8,7 @@ AUX gnutls-2.6.0-cxx-configure.in.patch 502 RMD160 fdd7f402f2a9122f8d7db9b165670
 AUX gnutls-2.6.0-openpgp-selftest.patch 508 RMD160 dcd254a8078c4ab21662377e4f53176a541292e4 SHA1 f73103e1aa5dcccd4449b42123c00b0e782cac67 SHA256 235e0a1e588548eb52627d9fae528c680aeaf260e6cb87afa86a624f134fbd08
 AUX gnutls-2.6.3-inttypes.patch 280 RMD160 720bffaff8aa81abead68715b4f9df50ffe97902 SHA1 cdadd1e3e7c96e8f2fc54993434f462cc794baf4 SHA256 6916d4d22feb41bfe1f456ccff685141f67b4c249dc43efc10335dbb06249a87
 AUX gnutls-2.6.3-irix.patch 675 RMD160 cdb6f95bd64d1425b7ba61fdf880fa8e5c5db889 SHA1 6769003660fbec93469ed6acb054fe87d92b896c SHA256 4d67692e9dd8ef9aa334d46305a7b8a2b4d247e92c06c6f1d0aa6662d0cf2375
-DIST gnutls-2.2.5.tar.bz2 4920322 RMD160 dd48a780849fc81c0a688116984eab8f41ea8ebf SHA1 7620d092c790f0a5ac5486c3563786ca8777083d SHA256 cf2689bd5b5f095e27f7a1aa2246212ef9322c0707aeb104238e9eb0f925ae57
-DIST gnutls-2.4.1.tar.bz2 4940118 RMD160 4e21a82047add916b8ccce8aa82c36b2c9bcff90 SHA1 7a439542e6344d5ccf11a29431a0600e7fe1c735 SHA256 d91401a6828d7300dc2b1106ff99610479aa35af05d39746cacdab8cdc7be5fd
-DIST gnutls-2.6.0.tar.bz2 5112845 RMD160 1d92662edd64e93e658fc527f1dfbfc99ab3a1da SHA1 bbd9e5f3a77bfcbef5a769c67d1576e7a6e4bda5 SHA256 9270a3eab9a9371839af79be92d50b8b21e7fbe157ebe915edae8e352f4e9fb5
-DIST gnutls-2.6.3.tar.bz2 5114214 RMD160 318c91f167988f2dfcde50015491b7dc7d4eea33 SHA1 f9b6a1d6135ef0a57a5cdd9fcb3e82bc62a27dcd SHA256 eddd7ee659dcf995362cf2ce5e9b43cb9ada34e55e10d28ee6273c555a5240e7
-DIST gnutls-2.7.4.tar.bz2 6033353 RMD160 04a36bac17d2bf40dc66568ebfde20e6f8599d19 SHA1 566bcca7fbc308358f7b0542ff242a958674925d SHA256 9d6490a999a45ae0c431215f3df1f649b93d771bc0e55a57c3072ae755481b64
-DIST gnutls-2.7.6.tar.bz2 6061940 RMD160 93cc4c0e7ad1cff59bbce39b32739503b66b3fc3 SHA1 76a5d6507955be286bc20f3236460f23820fada1 SHA256 a4c479c4934642d188ab8be19686783c2bd46eeb0b88fff1950200e931a9b2fc
-EBUILD gnutls-2.2.5.ebuild 2062 RMD160 eda4e155d191e343661d32b35c0be8bdecedec58 SHA1 48c36be8c360f4715724ce08ac7086560747115c SHA256 3f1601aa16e9315c335bcc8f4b07d8fbfc3a64ef3472e7c14337198624c76f9a
-EBUILD gnutls-2.4.1-r2.ebuild 2127 RMD160 5225bb541440df7e28e20b7fe82c70b875c731ff SHA1 2ca88d73dfa66234865ba05e10f9e460be6b069b SHA256 0307f3db873096d5ebd8a72b065189e54b566f2deae418b6488de2e1de26f291
-EBUILD gnutls-2.6.0-r2.ebuild 2611 RMD160 7665206916a5ef675a2b968a29d3c3fe6a164a04 SHA1 d213ea67671d8093cad2c46f2aee1a9c2e3d82c2 SHA256 f7d6b80bd8976cc5db76d4799038a5f5b1f5e3b228a6b79a787f772b522fbcc4
-EBUILD gnutls-2.6.3.ebuild 2515 RMD160 50bbd6f0592619f487a2080c41b48036a5ae539d SHA1 47453c63cfffa4488580fb94572392c892fabd7f SHA256 e62f775d491553d187f473bcfef128d3db1f72dbd0279e23f594955ede2fe259
-EBUILD gnutls-2.7.4.ebuild 2288 RMD160 5cbf93bc4b0069af4d07a4d126507761c968b51b SHA1 0a6f4a38082e2b6958f7636167907b39889251ed SHA256 330dd2e5ac4052b27c09aa264e095ded7113ca5bf6bceb4afe6c96d8e7232c7d
-EBUILD gnutls-2.7.6.ebuild 2243 RMD160 a05aa2278f99094f4a8acc2efa601e2538df9c12 SHA1 e284284654c32e4d9dd3d7a9388bcefeba89ba24 SHA256 d97e57d400f2d6d81f79e7c36330721fb21d961984da54b62b567779b9233171
-MISC ChangeLog 28425 RMD160 b00fbcdf5561c4b3bcafef0b18ed766efd287e18 SHA1 4134d91511690ba476ee751605d57db251d9a304 SHA256 c5326e04d5a4cc2192813a07fa862ad4401e1f8309bdcbf823fa692a28dd81f8
+DIST gnutls-2.7.7.tar.bz2 6040718 RMD160 054cb169ebc1e65830e64d0a10b6a9abea219b99 SHA1 3d975adf19c2d28e14c427629ce82be580d15f1d SHA256 005c1e18d0516feb85216b055972402ed00f8ea91abebd9558afce0e08ee0905
+EBUILD gnutls-2.7.7.ebuild 2260 RMD160 7ef9aab081e992d5b7b58e13470f98d31235bf67 SHA1 09feee88b8e2493793b0854a2b0c68f5c4b599d9 SHA256 2c0d3ab561c9dd7e9c061e4bdc4229a0e60e9aa398cd87f66feae5a6196ced4d
+MISC ChangeLog 28590 RMD160 7ca1299071625c9719d4440018a7ef7ded5d35f4 SHA1 4089b66571f0887104a826690c8f9875bee7c121 SHA256 0c2c90614cabd453687ec161310452d666b3ec4ea5f3cc28bfee0ea0884ee4c7
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
