@@ -1,8 +1,10 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/gnutls-2.6.0-r2.ebuild,v 1.3 2009/01/10 01:33:11 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/gnutls-2.7.7.ebuild,v 1.1 2009/04/26 18:48:50 arfrever Exp $
 
-inherit eutils libtool autotools
+EAPI="2"
+
+inherit autotools libtool
 
 DESCRIPTION="A TLS 1.0 and SSL 3.0 implementation for the GNU project"
 HOMEPAGE="http://www.gnutls.org/"
@@ -21,14 +23,13 @@ unset MINOR_VERSION
 LICENSE="LGPL-2.1 GPL-3"
 SLOT="0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-EAPI=1
 IUSE="bindist +cxx doc guile lzo nls zlib"
 
 RDEPEND="dev-libs/libgpg-error
 	>=dev-libs/libgcrypt-1.4.0
 	>=dev-libs/libtasn1-0.3.4
 	nls? ( virtual/libintl )
-	guile? ( dev-scheme/guile )
+	guile? ( dev-scheme/guile[networking] )
 	zlib? ( >=sys-libs/zlib-1.1 )
 	!bindist? ( lzo? ( >=dev-libs/lzo-2 ) )"
 DEPEND="${RDEPEND}
@@ -37,11 +38,6 @@ DEPEND="${RDEPEND}
 	nls? ( sys-devel/gettext )"
 
 pkg_setup() {
-	if use guile && ! built_with_use dev-scheme/guile networking; then
-		eerror "You are trying to compile ${PN} package with USE=\"guile\""
-		eerror "while dev-scheme/guile does not have USE=\"networking\""
-		die
-	fi
 	if use lzo && use bindist; then
 		ewarn "lzo support was disabled for binary distribution of gnutls"
 		ewarn "due to licensing issues. See Bug 202381 for details."
@@ -49,35 +45,33 @@ pkg_setup() {
 	fi
 }
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	for dir in gl/m4 m4 lib/gl/m4 lib/m4 libextra/gl/m4 libextra/m4 ; do
-		rm -f ${dir}/lt* ${dir}/libtool.m4
+src_prepare() {
+	epatch "${FILESDIR}"/${PN}-2.5.3-interix.patch
+
+	local dir
+	for dir in m4 lib/m4 libextra/m4 ; do
+		rm -f "${dir}/lt"* "${dir}/libtool.m4"
 	done
 	find . -name ltmain.sh -exec rm {} \;
-
-	epatch "${FILESDIR}"/${P}-cxx-configure.in.patch
-	epatch "${FILESDIR}"/${P}-openpgp-selftest.patch
-	eautoreconf
-	epatch "${FILESDIR}"/gnutls-2.2.5-CVE-2008-4989-V2.patch
-
-	epatch "${FILESDIR}"/${PN}-2.5.3-interix.patch
+	for dir in . lib libextra ; do
+		pushd "${dir}" > /dev/null
+		eautoreconf
+		popd > /dev/null
+	done
 
 	elibtoolize # for sane .so versioning on FreeBSD
 }
 
-src_compile() {
+src_configure() {
 	local myconf
 	use bindist && myconf="--without-lzo" || myconf="$(use_with lzo)"
 	econf  \
-		$(use_with zlib) \
-		$(use_enable nls) \
-		$(use_enable guile) \
 		$(use_enable cxx) \
 		$(use_enable doc gtk-doc) \
+		$(use_enable guile) \
+		$(use_enable nls) \
+		$(use_with zlib) \
 		${myconf}
-	emake || die "emake failed"
 }
 
 src_install() {
