@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.186 2009/04/12 18:07:52 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.187 2009/04/26 18:48:50 arfrever Exp $
+
+*gnutls-2.7.7 (26 Apr 2009)
+
+  26 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -gnutls-2.7.6.ebuild, +gnutls-2.7.7.ebuild:
+  Version bump.
 
 *gnutls-2.6.5 (12 Apr 2009)
 
